--- a/data/packages/glacies-etc/etc/s6/rc.conf
+++ b/data/packages/glacies-etc/etc/s6/rc.conf
@@ -1,3 +1,9 @@
-FONT_DEFAULT=Montserrat[wght].ttf
-FONT_MONO=AnonymousPro-Regular.ttf
-S6_INIT_FLAGS=-1c
+# system config
+hostname:eltanin-glacies
+font{
+	default:Montserrat[wght].ttf
+	mono:AnonymousPro-Regular.ttf
+}
+s6{
+	init-flags:-1c
+}
